app/styles/_stream.scss
.stream {
    a.twitter-timeline {

        display: block;
        text-decoration: none;
        text-align: center;
        color: #000;
        font-size: 3em;
        padding: 2em;
        cursor: wait;

        i {
            display: block;
            font-size: 3em;
        }

    }

    iframe {
        display: block;
        width: 100%;
        margin: 0 auto;
    }
}

